--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,10 @@
 		<version>2.1.8.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>br.com.imobiliariaype.vendas</groupId>
 	<artifactId>webportal</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>webportal</name>
-	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -68,6 +67,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>${project.name}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
