--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,18 @@
 	<artifactId>webportal</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<description>WebSystem using Spring Boot 2.0 WebFlux and Amazon Web Services</description>
+
+	<developers>
+
+		<developer>
+			<name>Johnnes Souza</name>
+			<email>jhonnesf5@gmail.com</email>
+			<url>https://www.linkedin.com/in/johnnesouza/</url>
+		</developer>
+
+	</developers>
+
 	<properties>
 		<java.version>1.8</java.version>
 		<swagger.version>3.0.0-SNAPSHOT</swagger.version>
@@ -63,17 +75,47 @@
 			<artifactId>springfox-spring-webflux</artifactId>
 			<version>${swagger.version}</version>
 		</dependency>
-
+		
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<finalName>${project.name}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
+			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<properties>
+				<activatedProperties>dev</activatedProperties>
+			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+		<profile>
+			<id>aws</id>
+			<properties>
+				<activatedProperties>aws</activatedProperties>
+			</properties>
+		</profile>
+	</profiles>
 
 </project>
