--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-# Mongo Configuration
-spring.data.mongodb.database=webportal
-spring.data.mongodb.host=localhost
+# Active Profile Environment
+# AWS - DEV
+
+spring.profiles.active=@activatedProperties@
