--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,5 +1,5 @@
-spring.data.mongodb.host=
-spring.data.mongodb.username=
-spring.data.mongodb.password=
-spring.data.mongodb.database=webportal
+spring.data.mongodb.host=AWS_ADDRESS
+spring.data.mongodb.username=DB_USER_NAME
+spring.data.mongodb.password=DB_USER_PASSWORD
+spring.data.mongodb.database=DB_NAME
 spring.data.mongodb.authentication-database=admin
